fixing layout problem language selector

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -58,6 +58,7 @@ $lang-select-pressed-text: #fff !default; // color of language tab text when mou
 $header-height: 52px !default; // height of the header
 $header-v-padding: 8px !default;
 $header-h-padding: 16px !default;
+$language-selector-mobile-height: 89px !default;
 $nav-width: 280px !default; // width of the navbar
 $nav-width-laptop: 230px !default; // width of the navbar laptop
 $examples-width: 35% !default; // portion of the screen taken up by code examples
